# em2native-tests

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
Android/: settings.gradle
Android.srcs/_common/: AndroidManifest.xml
Android.srcs/_common/res/values/: themes.xml
Android.srcs/_common/res/values-night/: themes.xml
Android.srcs/test1/: AndroidManifest.xml
Android.srcs/test1/java/org/cltn/yfrm/user_common/: SDL2ActivityWrapper_test1.java
Android.srcs/test2/: AndroidManifest.xml
Android.srcs/test2/java/org/cltn/yfrm/user_common/: SDL2ActivityWrapper_test2.java
Android/app/: build.gradle
Android/appANGLEVulkan/: build.gradle
Android/appGLES/: build.gradle
Android/gradle/wrapper/: gradle-wrapper.properties
_tinygltest/: CMakeLists.txt
blobs/mesa-dist-win/lib/x64/: libEGL.lib  libGLESv2.lib
blobs/mesa-dist-win/lib/x86/: libEGL.lib  libGLESv2.lib
host/: CMakeLists.txt  nccc_embedded_libs.c  ribbon.c
jstestapps/: compat-node.mjs  run.mjs
miniio/: miniio.h  miniio_uv.c  stub_miniio.cmake
native/imgui/: CMakeLists.txt  imgui_impl_cwgl.cpp  imgui_impl_yfrm.cpp  testimgui.cpp
native/nanovg/: CMakeLists.txt  demo.c  example.c  nanovg_cwgl.h
proj/uv/: CMakeLists.txt
scripts/: _localbuild.cmake  _okuokusetup.cmake  _runbuild.cmake  _runcheck.cmake  detect_android_sdk.cmake  detect_docker_images.cmake  detect_moltenvk.cmake  detect_msvc.cmake
templates/android-gradle/gradle/wrapper/: gradle-wrapper.properties
templates/android-project/app/: build.gradle  build.gradle.in
templates/android-resources/res/values/: strings.xml
templates/android-sdl2/: AndroidManifest.xml
testapps/dispatchtest/: app.sps
testapps/firstlight/: app.sps
